; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/pdh/extr_pdh.c_test_PdhMakeCounterPathA.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/pdh/extr_pdh.c_test_PdhMakeCounterPathA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i8*, i8*, i8*, i32, i8* }

@PDH_INVALID_ARGUMENT = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [35 x i8] c"PdhMakeCounterPathA failed 0x%08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"machine\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"expected \22machine\22 got %s\0A\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"object\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"instance\00", align 1
@.str.6 = private unnamed_addr constant [7 x i8] c"parent\00", align 1
@.str.7 = private unnamed_addr constant [8 x i8] c"counter\00", align 1
@ERROR_SUCCESS = common dso_local global i8* null, align 8
@.str.8 = private unnamed_addr constant [44 x i8] c"\\\\machine\\object(parent/instance#1)\\counter\00", align 1
@.str.9 = private unnamed_addr constant [63 x i8] c"expected \22\\\\machine\\object(parent/instance#1)\\counter\22 got %s\0A\00", align 1
@.str.10 = private unnamed_addr constant [37 x i8] c"\\\\machine\\object(instance#1)\\counter\00", align 1
@.str.11 = private unnamed_addr constant [56 x i8] c"expected \22\\\\machine\\object(instance#1)\\counter\22 got %s\0A\00", align 1
@.str.12 = private unnamed_addr constant [25 x i8] c"\\\\machine\\object\\counter\00", align 1
@.str.13 = private unnamed_addr constant [44 x i8] c"expected \22\\\\machine\\object\\counter\22 got %s\0A\00", align 1
@.str.14 = private unnamed_addr constant [16 x i8] c"\\object\\counter\00", align 1
@.str.15 = private unnamed_addr constant [35 x i8] c"expected \22\\object\\counter\22 got %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_PdhMakeCounterPathA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_PdhMakeCounterPathA() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_4__, align 8
  %3 = alloca [1024 x i8], align 16
  %4 = alloca i32, align 4
  %5 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* null, i8* null, i32* null, i32 0)
  store i8* %5, i8** %1, align 8
  %6 = load i8*, i8** %1, align 8
  %7 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %8 = icmp eq i8* %6, %7
  %9 = zext i1 %8 to i32
  %10 = load i8*, i8** %1, align 8
  %11 = call i32 @ok(i32 %9, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %10)
  store i32 0, i32* %4, align 4
  %12 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* null, i8* null, i32* %4, i32 0)
  store i8* %12, i8** %1, align 8
  %13 = load i8*, i8** %1, align 8
  %14 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %15 = icmp eq i8* %13, %14
  %16 = zext i1 %15 to i32
  %17 = load i8*, i8** %1, align 8
  %18 = call i32 @ok(i32 %16, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %17)
  store i32 0, i32* %4, align 4
  %19 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %20 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* null, i8* %19, i32* %4, i32 0)
  store i8* %20, i8** %1, align 8
  %21 = load i8*, i8** %1, align 8
  %22 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %23 = icmp eq i8* %21, %22
  %24 = zext i1 %23 to i32
  %25 = load i8*, i8** %1, align 8
  %26 = call i32 @ok(i32 %24, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %25)
  store i32 1024, i32* %4, align 4
  %27 = call i32 @memset(%struct.TYPE_4__* %2, i32 0, i32 48)
  %28 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %29 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %28, i32* %4, i32 0)
  store i8* %29, i8** %1, align 8
  %30 = load i8*, i8** %1, align 8
  %31 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %32 = icmp eq i8* %30, %31
  %33 = zext i1 %32 to i32
  %34 = load i8*, i8** %1, align 8
  %35 = call i32 @ok(i32 %33, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %34)
  %36 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %36, align 16
  store i32 1024, i32* %4, align 4
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %37, align 8
  %38 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %39 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %38, i32* %4, i32 0)
  store i8* %39, i8** %1, align 8
  %40 = load i8*, i8** %1, align 8
  %41 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %42 = icmp eq i8* %40, %41
  %43 = zext i1 %42 to i32
  %44 = load i8*, i8** %1, align 8
  %45 = call i32 @ok(i32 %43, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %44)
  %46 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %47 = call i32 @strcmp(i8* %46, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  %48 = icmp ne i32 %47, 0
  %49 = xor i1 %48, true
  %50 = zext i1 %49 to i32
  %51 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %52 = call i32 @ok(i32 %50, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0), i8* %51)
  %53 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %53, align 16
  store i32 1024, i32* %4, align 4
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i8** %54, align 8
  %55 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %56 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %55, i32* %4, i32 0)
  store i8* %56, i8** %1, align 8
  %57 = load i8*, i8** %1, align 8
  %58 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %59 = icmp eq i8* %57, %58
  %60 = zext i1 %59 to i32
  %61 = load i8*, i8** %1, align 8
  %62 = call i32 @ok(i32 %60, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %61)
  %63 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %64 = call i32 @strcmp(i8* %63, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  %65 = icmp ne i32 %64, 0
  %66 = xor i1 %65, true
  %67 = zext i1 %66 to i32
  %68 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %69 = call i32 @ok(i32 %67, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0), i8* %68)
  %70 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %70, align 16
  store i32 1024, i32* %4, align 4
  %71 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 2
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8** %71, align 8
  %72 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %73 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %72, i32* %4, i32 0)
  store i8* %73, i8** %1, align 8
  %74 = load i8*, i8** %1, align 8
  %75 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %76 = icmp eq i8* %74, %75
  %77 = zext i1 %76 to i32
  %78 = load i8*, i8** %1, align 8
  %79 = call i32 @ok(i32 %77, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %78)
  %80 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %81 = call i32 @strcmp(i8* %80, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  %82 = icmp ne i32 %81, 0
  %83 = xor i1 %82, true
  %84 = zext i1 %83 to i32
  %85 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %86 = call i32 @ok(i32 %84, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0), i8* %85)
  %87 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %87, align 16
  store i32 1024, i32* %4, align 4
  %88 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 3
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i8** %88, align 8
  %89 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %90 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %89, i32* %4, i32 0)
  store i8* %90, i8** %1, align 8
  %91 = load i8*, i8** %1, align 8
  %92 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %93 = icmp eq i8* %91, %92
  %94 = zext i1 %93 to i32
  %95 = load i8*, i8** %1, align 8
  %96 = call i32 @ok(i32 %94, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %95)
  %97 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %98 = call i32 @strcmp(i8* %97, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  %99 = icmp ne i32 %98, 0
  %100 = xor i1 %99, true
  %101 = zext i1 %100 to i32
  %102 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %103 = call i32 @ok(i32 %101, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0), i8* %102)
  %104 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %104, align 16
  store i32 1024, i32* %4, align 4
  %105 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 4
  store i32 1, i32* %105, align 8
  %106 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %107 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %106, i32* %4, i32 0)
  store i8* %107, i8** %1, align 8
  %108 = load i8*, i8** %1, align 8
  %109 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %110 = icmp eq i8* %108, %109
  %111 = zext i1 %110 to i32
  %112 = load i8*, i8** %1, align 8
  %113 = call i32 @ok(i32 %111, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %112)
  %114 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %115 = call i32 @strcmp(i8* %114, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  %116 = icmp ne i32 %115, 0
  %117 = xor i1 %116, true
  %118 = zext i1 %117 to i32
  %119 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %120 = call i32 @ok(i32 %118, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0), i8* %119)
  %121 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %121, align 16
  store i32 1024, i32* %4, align 4
  %122 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 5
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.7, i64 0, i64 0), i8** %122, align 8
  %123 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %124 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %123, i32* %4, i32 0)
  store i8* %124, i8** %1, align 8
  %125 = load i8*, i8** %1, align 8
  %126 = load i8*, i8** @ERROR_SUCCESS, align 8
  %127 = icmp eq i8* %125, %126
  %128 = zext i1 %127 to i32
  %129 = load i8*, i8** %1, align 8
  %130 = call i32 @ok(i32 %128, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %129)
  %131 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %132 = call i32 @strcmp(i8* %131, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.8, i64 0, i64 0))
  %133 = icmp ne i32 %132, 0
  %134 = xor i1 %133, true
  %135 = zext i1 %134 to i32
  %136 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %137 = call i32 @ok(i32 %135, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.9, i64 0, i64 0), i8* %136)
  %138 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %138, align 16
  store i32 1024, i32* %4, align 4
  %139 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 3
  store i8* null, i8** %139, align 8
  %140 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %141 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %140, i32* %4, i32 0)
  store i8* %141, i8** %1, align 8
  %142 = load i8*, i8** %1, align 8
  %143 = load i8*, i8** @ERROR_SUCCESS, align 8
  %144 = icmp eq i8* %142, %143
  %145 = zext i1 %144 to i32
  %146 = load i8*, i8** %1, align 8
  %147 = call i32 @ok(i32 %145, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %146)
  %148 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %149 = call i32 @strcmp(i8* %148, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.10, i64 0, i64 0))
  %150 = icmp ne i32 %149, 0
  %151 = xor i1 %150, true
  %152 = zext i1 %151 to i32
  %153 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %154 = call i32 @ok(i32 %152, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.11, i64 0, i64 0), i8* %153)
  %155 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %155, align 16
  store i32 1024, i32* %4, align 4
  %156 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 2
  store i8* null, i8** %156, align 8
  %157 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %158 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %157, i32* %4, i32 0)
  store i8* %158, i8** %1, align 8
  %159 = load i8*, i8** %1, align 8
  %160 = load i8*, i8** @ERROR_SUCCESS, align 8
  %161 = icmp eq i8* %159, %160
  %162 = zext i1 %161 to i32
  %163 = load i8*, i8** %1, align 8
  %164 = call i32 @ok(i32 %162, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %163)
  %165 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %166 = call i32 @strcmp(i8* %165, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.12, i64 0, i64 0))
  %167 = icmp ne i32 %166, 0
  %168 = xor i1 %167, true
  %169 = zext i1 %168 to i32
  %170 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %171 = call i32 @ok(i32 %169, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.13, i64 0, i64 0), i8* %170)
  %172 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %172, align 16
  store i32 1024, i32* %4, align 4
  %173 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i8* null, i8** %173, align 8
  %174 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %175 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %174, i32* %4, i32 0)
  store i8* %175, i8** %1, align 8
  %176 = load i8*, i8** %1, align 8
  %177 = load i8*, i8** @ERROR_SUCCESS, align 8
  %178 = icmp eq i8* %176, %177
  %179 = zext i1 %178 to i32
  %180 = load i8*, i8** %1, align 8
  %181 = call i32 @ok(i32 %179, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %180)
  %182 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %183 = call i32 @strcmp(i8* %182, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.14, i64 0, i64 0))
  %184 = icmp ne i32 %183, 0
  %185 = xor i1 %184, true
  %186 = zext i1 %185 to i32
  %187 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %188 = call i32 @ok(i32 %186, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.15, i64 0, i64 0), i8* %187)
  %189 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  store i8 0, i8* %189, align 16
  store i32 1024, i32* %4, align 4
  %190 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  store i8* null, i8** %190, align 8
  %191 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %192 = call i8* @PdhMakeCounterPathA(%struct.TYPE_4__* %2, i8* %191, i32* %4, i32 0)
  store i8* %192, i8** %1, align 8
  %193 = load i8*, i8** %1, align 8
  %194 = load i8*, i8** @PDH_INVALID_ARGUMENT, align 8
  %195 = icmp eq i8* %193, %194
  %196 = zext i1 %195 to i32
  %197 = load i8*, i8** %1, align 8
  %198 = call i32 @ok(i32 %196, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %197)
  ret void
}

declare dso_local i8* @PdhMakeCounterPathA(%struct.TYPE_4__*, i8*, i32*, i32) #1

declare dso_local i32 @ok(i32, i8*, i8*) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
